# snake-game

./: main.py  pyproject.toml  readme.md
snake_game/: game.py  main.py  settings.py  snake.py  sprites.py  ui.py
